Bug 1719921 [wpt PR 29628] - Add negative and nonfinite roundrect tests for DOMPoint and DOMPointInit inputs, a=testonly
Automatic update from web-platform-tests
Add negative and nonfinite roundrect tests for DOMPoint and DOMPointInit inputs

Bug: 1193694
Change-Id: I44e2fd97e4df820dae622d5aa7adf7f2886d15ba
Reviewed-on: https://chromium-review.googlesource.com/c/chromium/src/+/3017051
Reviewed-by: Aaron Krajeski <aaronhkchromium.org>
Reviewed-by: Domenic Denicola <domenicchromium.org>
Commit-Queue: Aaron Krajeski <aaronhkchromium.org>
Cr-Commit-Position: refs/heads/master{#903027}

--

wpt-commits: 3c065a915ad2fbbadfca2157a2f8daf53d40fd42
wpt-pr: 29628

UltraBlame original commit: 98ef790d5aec0f1762cbd5bb7491414349a74932

--- a/testing/web-platform/tests/html/canvas/offscreen/path-objects/2d.path.roundrect.radius.negative.html
+++ b/testing/web-platform/tests/html/canvas/offscreen/path-objects/2d.path.roundrect.radius.negative.html
@@ -274,6 +274,128 @@ roundRect
 }
 )
 ;
+assert_throws_js
+(
+RangeError
+(
+)
+=
+>
+{
+ctx
+.
+roundRect
+(
+0
+0
+0
+0
+[
+new
+DOMPoint
+(
+-
+1
+1
+)
+1
+]
+)
+}
+)
+;
+assert_throws_js
+(
+RangeError
+(
+)
+=
+>
+{
+ctx
+.
+roundRect
+(
+0
+0
+0
+0
+[
+new
+DOMPoint
+(
+1
+-
+1
+)
+]
+)
+}
+)
+;
+assert_throws_js
+(
+RangeError
+(
+)
+=
+>
+{
+ctx
+.
+roundRect
+(
+0
+0
+0
+0
+[
+{
+x
+:
+-
+1
+y
+:
+1
+}
+1
+]
+)
+}
+)
+;
+assert_throws_js
+(
+RangeError
+(
+)
+=
+>
+{
+ctx
+.
+roundRect
+(
+0
+0
+0
+0
+[
+{
+x
+:
+1
+y
+:
+-
+1
+}
+]
+)
+}
+)
+;
 t
 .
 done
