--- a/testing/web-platform/tests/html/canvas/element/path-objects/2d.path.roundrect.radius.negative.html
+++ b/testing/web-platform/tests/html/canvas/element/path-objects/2d.path.roundrect.radius.negative.html
@@ -325,6 +325,128 @@ roundRect
 }
 )
 ;
+assert_throws_js
+(
+RangeError
+(
+)
+=
+>
+{
+ctx
+.
+roundRect
+(
+0
+0
+0
+0
+[
+new
+DOMPoint
+(
+-
+1
+1
+)
+1
+]
+)
+}
+)
+;
+assert_throws_js
+(
+RangeError
+(
+)
+=
+>
+{
+ctx
+.
+roundRect
+(
+0
+0
+0
+0
+[
+new
+DOMPoint
+(
+1
+-
+1
+)
+]
+)
+}
+)
+;
+assert_throws_js
+(
+RangeError
+(
+)
+=
+>
+{
+ctx
+.
+roundRect
+(
+0
+0
+0
+0
+[
+{
+x
+:
+-
+1
+y
+:
+1
+}
+1
+]
+)
+}
+)
+;
+assert_throws_js
+(
+RangeError
+(
+)
+=
+>
+{
+ctx
+.
+roundRect
+(
+0
+0
+0
+0
+[
+{
+x
+:
+1
+y
+:
+-
+1
+}
+]
+)
+}
+)
+;
 }
 )
 ;
