Bug 1721004 [wpt PR 29696] - [BreakoutBox] Update MediaStreamTrackGenerator-video.https.html WPT, a=testonly
Automatic update from web-platform-tests
[BreakoutBox] Update MediaStreamTrackGenerator-video.https.html WPT

For a video element test, wait for the loadstart event to detect
the connection between the video element and the generator.
Also use the timeupdate event to detect the playout of the generated
frame.

Fixed: 1230283
Change-Id: Ib8e9914db97d2940db90184cc1a0c479cdd75e0b
Reviewed-on: https://chromium-review.googlesource.com/c/chromium/src/+/3034650
Reviewed-by: Tony Herre <topricechromium.org>
Commit-Queue: Guido Urdaneta <guidouchromium.org>
Cr-Commit-Position: refs/heads/master{#903050}

--

wpt-commits: 0612eff99220e2c6776270e42c16c4841d85c7fb
wpt-pr: 29696

UltraBlame original commit: 3f42d820e0673051b5ddcd60fc265e51c334c38c

--- a/testing/web-platform/tests/mediacapture-insertable-streams/MediaStreamTrackGenerator-video.https.html
+++ b/testing/web-platform/tests/mediacapture-insertable-streams/MediaStreamTrackGenerator-video.https.html
@@ -713,33 +713,32 @@ play
 ;
 /
 /
-Allow
-async
-setup
-of
+Wait
+for
 the
-track
+video
+element
+to
+be
+connected
+to
+the
 generator
 and
-stream
+/
+/
+generate
+the
+frame
 .
-await
-new
-Promise
+video
+.
+onloadstart
+=
 (
-r
+)
 =
 >
-t
-.
-step_timeout
-(
-r
-1
-)
-)
-;
-await
 generator
 .
 writable
@@ -753,27 +752,29 @@ write
 videoFrame
 )
 ;
-await
+return
+new
+Promise
+(
+(
+resolve
+)
+=
+>
+{
+video
+.
+ontimeupdate
+=
 t
 .
-step_wait
+step_func
 (
 (
 )
 =
 >
-video
-.
-currentTime
->
-0
-"
-video
-has
-played
-"
-)
-;
+{
 const
 canvas
 =
@@ -870,6 +871,16 @@ pixel
 .
 data
 pixelColour
+)
+;
+resolve
+(
+)
+;
+}
+)
+;
+}
 )
 ;
 }
