--- a/toolkit/content/aboutSupport.xhtml
+++ b/toolkit/content/aboutSupport.xhtml
@@ -1351,6 +1351,62 @@ td
 /
 tr
 >
+<
+tr
+id
+=
+"
+os
+-
+theme
+-
+row
+"
+>
+<
+th
+class
+=
+"
+column
+"
+data
+-
+l10n
+-
+id
+=
+"
+app
+-
+basics
+-
+os
+-
+theme
+"
+/
+>
+<
+td
+id
+=
+"
+os
+-
+theme
+-
+box
+"
+>
+<
+/
+td
+>
+<
+/
+tr
+>
 #
 ifdef
 XP_MACOSX
