Bug 1721370 - Undo the behavior change from bug 1720703. r=annevk
Making <source> display: none is not web compatible. <track> could
probably stay, your call, but other browsers also don't do this so
perhaps we should just change the spec...

Differential Revision: https://phabricator.services.mozilla.com/D120454

UltraBlame original commit: c7a256aec21040849ddc93d48ed929af65d14ffd

--- a/testing/web-platform/tests/html/rendering/non-replaced-elements/hidden-elements.html
+++ b/testing/web-platform/tests/html/rendering/non-replaced-elements/hidden-elements.html
@@ -75,7 +75,19 @@ div
 script
 >
 const
-kLocalNames
+kNotHiddenElementLocalNames
+=
+[
+"
+source
+"
+"
+track
+"
+]
+;
+const
+kHiddenElementLocalNames
 =
 [
 "
@@ -115,16 +127,10 @@ rp
 script
 "
 "
-source
-"
-"
 style
 "
 "
 template
-"
-"
-track
 "
 "
 title
@@ -136,7 +142,64 @@ for
 let
 name
 of
-kLocalNames
+kNotHiddenElementLocalNames
+)
+{
+test
+(
+function
+(
+)
+{
+let
+element
+=
+document
+.
+createElement
+(
+name
+)
+;
+document
+.
+body
+.
+appendChild
+(
+element
+)
+;
+assert_equals
+(
+getComputedStyle
+(
+element
+)
+.
+display
+"
+inline
+"
+)
+;
+}
+{
+name
+}
+should
+not
+be
+hidden
+)
+;
+}
+for
+(
+let
+name
+of
+kHiddenElementLocalNames
 )
 {
 test
