Bug 1721684 - Update the http logging link, r=nhnt11 DONTBUILD
Differential Revision: https://phabricator.services.mozilla.com/D120527

UltraBlame original commit: 458cdab169f781da77ddd7b7f05d220b1a8cb7b9

--- a/toolkit/content/aboutNetworking.html
+++ b/toolkit/content/aboutNetworking.html
@@ -2972,19 +2972,23 @@ https
 :
 /
 /
-developer
+firefox
+-
+source
+-
+docs
 .
 mozilla
 .
 org
 /
-docs
+networking
 /
-Mozilla
+http
 /
-Debugging
-/
-HTTP_logging
+logging
+.
+html
 "
 >
 <
