Bug 1721317 - part 1: Make `test_pasting_table_rows.html` abort remaining tests if unexpected exception is thrown r=m_kato
Oddly, clipboard related test randomly (and frequently) fails in my environment.
And `test_pasting_table_rows.html` does not handle exception which is thrown
by `SimpleTest.promiseClipboardChange`.  Therefore, I'm always waiting 5 mins
when I run all tests under `editor/libeditor/tests`.

Therefore, I'd like to make it abort remaning tests if it fails due to
an unexpected exception.

Additionally, this fixes a bug in `_copyToClipboard#validatorFn`.  This method
modifies the variable of the parent function, `aExpectedPastedHTML`, with
itself.  Therefore, when the function is called multiple times, the expected
string will be re-wrapped with `kTextHtmlPrefixClipboardDataWindows` and
`kTextHtmlSuffixClipboardDataWindows` again and again...

Differential Revision: https://phabricator.services.mozilla.com/D120424

UltraBlame original commit: 4aa49c91de526ceb97b5d93ca63c940516141d8c

--- a/editor/libeditor/tests/test_pasting_table_rows.html
+++ b/editor/libeditor/tests/test_pasting_table_rows.html
@@ -788,6 +788,7 @@ children
 [
 0
 ]
+?
 .
 tagName
 kTableTagName
@@ -829,6 +830,7 @@ children
 [
 0
 ]
+?
 .
 outerHTML
 )
@@ -901,6 +903,12 @@ innerHTML
 this
 .
 _innerHTMLOfTargetBeforeTestRun
+;
+targetElement
+.
+getBoundingClientRect
+(
+)
 ;
 SimpleTest
 .
@@ -1572,11 +1580,14 @@ text
 html
 "
 ;
-function
-validatorFn
+const
+expectedPastedHTML
+=
 (
-aData
+(
 )
+=
+>
 {
 if
 (
@@ -1646,8 +1657,7 @@ cpp
 1840
 1842
 .
-aExpectedPastedHTML
-=
+return
 kTextHtmlPrefixClipboardDataWindows
 +
 aExpectedPastedHTML
@@ -1655,6 +1665,20 @@ aExpectedPastedHTML
 kTextHtmlSuffixClipboardDataWindows
 ;
 }
+return
+aExpectedPastedHTML
+;
+}
+)
+(
+)
+;
+function
+validatorFn
+(
+aData
+)
+{
 /
 /
 The
@@ -1683,7 +1707,8 @@ Hence
 remove
 them
 .
-return
+if
+(
 SimpleTest
 .
 stripLinebreaksAndWhitespaceAfterTags
@@ -1696,8 +1721,55 @@ SimpleTest
 .
 stripLinebreaksAndWhitespaceAfterTags
 (
-aExpectedPastedHTML
+expectedPastedHTML
 )
+)
+{
+return
+true
+;
+}
+info
+(
+Waiting
+clipboard
+data
+:
+expected
+:
+\
+n
+"
+{
+SimpleTest
+.
+stripLinebreaksAndWhitespaceAfterTags
+(
+expectedPastedHTML
+)
+}
+"
+\
+n
+but
+got
+:
+\
+n
+"
+{
+SimpleTest
+.
+stripLinebreaksAndWhitespaceAfterTags
+(
+aData
+)
+}
+"
+)
+;
+return
+false
 ;
 }
 return
@@ -1865,6 +1937,18 @@ true
 aEvent
 *
 /
+)
+;
+info
+(
+"
+Waiting
+for
+paste
+.
+.
+.
+"
 )
 ;
 await
@@ -2245,6 +2329,8 @@ testGroup
 selectionMode
 )
 ;
+try
+{
 await
 test
 .
@@ -2252,6 +2338,40 @@ _run
 (
 )
 ;
+}
+catch
+(
+ex
+)
+{
+ok
+(
+false
+Aborting
+the
+following
+tests
+due
+to
+unexpected
+error
+:
+{
+ex
+.
+message
+}
+)
+;
+SimpleTest
+.
+finish
+(
+)
+;
+return
+;
+}
 test
 .
 _restoreStateOfDocumentBeforeRun
