Bug 1721317 - part 2: Make `_pasteToTargetElement()` sync r=m_kato
The function tests whether `input` event whose `inputType` is `insertFromPaste`
or not and it waits the event until timeout.  This sometimes fails in my
environment, and `input` event should be fired synchronously in this case.
Therefore, it should just fail if the event isn't fired.

Depends on D120424

Differential Revision: https://phabricator.services.mozilla.com/D120425

UltraBlame original commit: 1979267c2a7f69a743d039060eb9d0acf1633736

--- a/editor/libeditor/tests/test_pasting_table_rows.html
+++ b/editor/libeditor/tests/test_pasting_table_rows.html
@@ -744,7 +744,6 @@ _copyToClipboard
 expectedPastedHTML
 )
 ;
-await
 this
 .
 _pasteToTargetElement
@@ -1802,20 +1801,9 @@ flavor
 )
 ;
 }
-async
 _pasteToTargetElement
 (
 )
-{
-const
-promiseTargetElementChanged
-=
-new
-Promise
-(
-resolve
-=
->
 {
 const
 editingHost
@@ -1837,6 +1825,9 @@ kTargetElementId
 )
 :
 document
+;
+let
+inputEvent
 ;
 function
 handleInputEvent
@@ -1888,9 +1879,9 @@ event
 '
 )
 ;
-resolve
-(
-)
+inputEvent
+=
+aEvent
 ;
 }
 }
@@ -1900,9 +1891,6 @@ addEventListener
 (
 kInputEventType
 handleInputEvent
-)
-;
-}
 )
 ;
 const
@@ -1939,20 +1927,36 @@ aEvent
 /
 )
 ;
-info
+ok
 (
+inputEvent
+!
+=
+undefined
+An
+{
+kInputEventType
+}
+whose
 "
-Waiting
-for
-paste
-.
-.
-.
+inputType
 "
+is
+{
+kInputEventInputTypeInsertFromPaste
+}
+should
+'
+ve
+been
+fired
+on
+{
+editingHost
+.
+localName
+}
 )
-;
-await
-promiseTargetElementChanged
 ;
 }
 }
