Bug 1722031 - Fix an accent-color test. r=mstange
No other property returns `currentcolor` in the computed style, and
Chrome agrees with us on this test.

Differential Revision: https://phabricator.services.mozilla.com/D120725

UltraBlame original commit: 2a0274aa40148b9d89d79d844aa27b3ae2430bd8

--- a/testing/web-platform/tests/css/css-ui/accent-color-computed.html
+++ b/testing/web-platform/tests/css/css-ui/accent-color-computed.html
@@ -102,6 +102,10 @@ color
 :
 red
 ;
+color
+:
+black
+;
 }
 <
 /
@@ -245,7 +249,12 @@ color
 currentcolor
 '
 '
-currentcolor
+rgb
+(
+0
+0
+0
+)
 '
 )
 ;
