Bug 1597285 separate permissions-policy.js messages from testdriver messages r=jib
testdriver also uses postMessage().
https://github.com/web-platform-tests/wpt/blob/b32b3e223f63dc5500de31dfc117a03ec582f38d/tools/wptrunner/wptrunner/testdriver-extra.js#L144

Depends on D119599

Differential Revision: https://phabricator.services.mozilla.com/D119600

UltraBlame original commit: 0606d607518ffc419f11cd53aedf3e19367cebc4

--- a/testing/web-platform/tests/permissions-policy/resources/permissions-policy-payment.html
+++ b/testing/web-platform/tests/permissions-policy/resources/permissions-policy-payment.html
@@ -60,6 +60,11 @@ value
 }
 }
 ;
+let
+enabled
+=
+true
+;
 try
 {
 new
@@ -69,41 +74,36 @@ supportedInstruments
 details
 )
 ;
-parent
-.
-postMessage
-(
-{
-enabled
-:
-true
-}
-'
-*
-'
-)
-;
 }
 catch
 (
 e
 )
 {
+enabled
+=
+false
+;
+}
 parent
 .
 postMessage
 (
 {
-enabled
+type
 :
-false
+'
+availability
+-
+result
+'
+enabled
 }
 '
 *
 '
 )
 ;
-}
 }
 <
 /
