Bug 1597285 disable testharness script loading in iframe documents r=jib
testdriver needs this for use in iframe documents.
https://github.com/web-platform-tests/wpt/blob/b32b3e223f63dc5500de31dfc117a03ec582f38d/tools/wptrunner/wptrunner/testdriver-extra.js#L164

Depends on D119601

Differential Revision: https://phabricator.services.mozilla.com/D119602

UltraBlame original commit: f161599c2482a689eddd982d8971e7ce9cf3b39e

--- a/testing/web-platform/tests/screen-capture/permissions-policy.https.sub.html
+++ b/testing/web-platform/tests/screen-capture/permissions-policy.https.sub.html
@@ -40,6 +40,23 @@ testharness
 .
 js
 "
+type
+=
+"
+text
+/
+javascript
+{
+{
+GET
+[
+in
+-
+iframe
+]
+}
+}
+"
 >
 <
 /
@@ -56,6 +73,23 @@ resources
 testharnessreport
 .
 js
+"
+type
+=
+"
+text
+/
+javascript
+{
+{
+GET
+[
+in
+-
+iframe
+]
+}
+}
 "
 >
 <
