Bug 1597285 use test_driver.set_test_context() in iframe documents r=jib
https://web-platform-tests.org/writing-tests/testdriver.html#using-testdriver-in-other-browsing-contexts

Depends on D119602

Differential Revision: https://phabricator.services.mozilla.com/D119603

UltraBlame original commit: 5b131f57a8d5c045333d39e731e19ea577b6095a

--- a/testing/web-platform/tests/screen-capture/permissions-policy.https.sub.html
+++ b/testing/web-platform/tests/screen-capture/permissions-policy.https.sub.html
@@ -326,6 +326,23 @@ stop
 }
 }
 }
+if
+(
+page_loaded_in_iframe
+(
+)
+)
+{
+test_driver
+.
+set_test_context
+(
+window
+.
+parent
+)
+;
+}
 const
 cross_domain
 =
