Bug 1597285 replace custom user gesture with test_driver.bless() r=jib
Depends on D119603

Differential Revision: https://phabricator.services.mozilla.com/D119604

UltraBlame original commit: 8e73cbfca53f560d5610f88732fb6b96c25a363d

--- a/testing/web-platform/tests/screen-capture/permissions-policy.https.sub.html
+++ b/testing/web-platform/tests/screen-capture/permissions-policy.https.sub.html
@@ -15,20 +15,6 @@ utf
 body
 >
 <
-button
-id
-=
-"
-button
-"
->
-User
-gesture
-<
-/
-button
->
-<
 script
 src
 =
@@ -193,32 +179,20 @@ getDisplayMedia
 constraints
 )
 {
-const
-p
-=
-new
-Promise
-(
-r
-=
->
-button
-.
-onclick
-=
-r
-)
-;
 await
 test_driver
 .
-click
+bless
 (
-button
+'
+transient
+activation
+for
+getDisplayMedia
+(
 )
-;
-await
-p
+'
+)
 ;
 return
 navigator
