Bug 1720535: Add https-first-disabled annotation to mochitest harness r=ahal
Differential Revision: https://phabricator.services.mozilla.com/D119970

UltraBlame original commit: a1cbdd0819166114c5de35f7f1b96add72f7aa7d

--- a/testing/mochitest/browser-harness.xhtml
+++ b/testing/mochitest/browser-harness.xhtml
@@ -736,6 +736,19 @@ expected
 ;
 this
 .
+https_first_disabled
+=
+aTestFile
+[
+'
+https_first_disabled
+'
+]
+|
+|
+false
+this
+.
 dumper
 =
 gDumper
