Bug 1720554 Part 2 - Add WPT for paper name with orientation r=emilio
Differential Revision: https://phabricator.services.mozilla.com/D120389

UltraBlame original commit: 5f5c284c5fe32909513debed7b4c3e416f3e7f31

--- a/testing/web-platform/tests/css/css-page/parsing/size-001.html
+++ b/testing/web-platform/tests/css/css-page/parsing/size-001.html
@@ -154,6 +154,22 @@ size
 landscape
 ;
 }
+page
+{
+size
+:
+letter
+portrait
+;
+}
+page
+{
+size
+:
+legal
+landscape
+;
+}
 <
 /
 style
@@ -196,6 +212,13 @@ b5
 auto
 "
 "
+landscape
+"
+"
+letter
+"
+"
+legal
 landscape
 "
 ]
