--- a/dom/canvas/test/webgl-mochitest/test_renderer_strings.html
+++ b/dom/canvas/test/webgl-mochitest/test_renderer_strings.html
@@ -58,338 +58,76 @@ body
 <
 script
 >
+async
 function
-AssertError
+asyncPushPrefEnv
 (
-gl
-expected
-info
+env
 )
 {
-var
-actual
+return
+new
+Promise
+(
+res
 =
-gl
-.
-getError
-(
-)
-;
-while
-(
-gl
-.
-getError
-(
-)
-)
+>
 {
-}
-ok
-(
-actual
-=
-=
-expected
-'
-For
-'
-+
-info
-+
-'
-expected
-GL
-error
-0x
-'
-+
-expected
-.
-toString
-(
-16
-)
-+
-'
-got
-0x
-'
-+
-actual
-.
-toString
-(
-16
-)
-)
-;
-}
-var
-gl
-;
-var
-RENDERER_OVERRIDE
-=
-'
-overridden
-renderer
-'
-;
-var
-VENDOR_OVERRIDE
-=
-'
-overridden
-vendor
-'
-;
-function
-TestExt
-(
-)
-{
-var
-ext
-=
-gl
-.
-getExtension
-(
-'
-WEBGL_debug_renderer_info
-'
-)
-;
-ok
-(
-ext
-'
-When
-pref
-enabled
-:
-Should
-have
-access
-to
-\
-'
-WEBGL_debug_renderer_info
-\
-'
-.
-'
-)
-;
-AssertError
-(
-gl
-0
-'
-start
-of
-test
-'
-)
-;
-var
-renderer
-=
-gl
-.
-getParameter
-(
-ext
-.
-UNMASKED_RENDERER_WEBGL
-)
-;
-AssertError
-(
-gl
-0
-'
-UNMASKED_RENDERER_WEBGL
-'
-)
-;
-ok
-(
-renderer
-'
-When
-pref
-enabled
-:
-UNMASKED_RENDERER_WEBGL
-value
-should
-not
-be
-empty
-was
-\
-'
-'
-+
-renderer
-+
-'
-\
-'
-'
-)
-;
-var
-vendor
-=
-gl
-.
-getParameter
-(
-ext
-.
-UNMASKED_VENDOR_WEBGL
-)
-;
-AssertError
-(
-gl
-0
-'
-UNMASKED_VENDOR_WEBGL
-'
-)
-;
-ok
-(
-vendor
-'
-When
-pref
-enabled
-:
-UNMASKED_VENDOR_WEBGL
-value
-should
-not
-be
-empty
-was
-\
-'
-'
-+
-vendor
-+
-'
-\
-'
-'
-)
-;
-var
-prefArrArr
-=
-[
-[
-'
-webgl
-.
-renderer
--
-string
--
-override
-'
-RENDERER_OVERRIDE
-]
-[
-'
-webgl
-.
-vendor
--
-string
--
-override
-'
-VENDOR_OVERRIDE
-]
-]
-;
-var
-prefEnv
-=
-{
-'
-set
-'
-:
-prefArrArr
-}
-;
 SpecialPowers
 .
 pushPrefEnv
 (
-prefEnv
-TestOverrides
+env
+res
 )
 ;
 }
+)
+;
+}
+let
+gl
+ext
+;
 function
-TestOverrides
+getStrings
 (
 )
 {
-var
-ext
+const
+ret
 =
+{
+renderer
+:
 gl
 .
-getExtension
+getParameter
 (
-'
-WEBGL_debug_renderer_info
-'
+gl
+.
+RENDERER
 )
+vendor
+:
+gl
+.
+getParameter
+(
+gl
+.
+VENDOR
+)
+}
 ;
-ok
+if
 (
 ext
-'
-When
-overrides
-set
-:
-Should
-have
-access
-to
-\
-'
-WEBGL_debug_renderer_info
-\
-'
+)
+{
+ret
 .
-'
-)
-;
-AssertError
-(
-gl
-0
-'
-start
-of
-test
-'
-)
-;
-var
-renderer
+unmasked_renderer
 =
 gl
 .
@@ -400,54 +138,9 @@ ext
 UNMASKED_RENDERER_WEBGL
 )
 ;
-AssertError
-(
-gl
-0
-'
-UNMASKED_RENDERER_WEBGL
-'
-)
-;
-ok
-(
-renderer
-=
-=
-RENDERER_OVERRIDE
-'
-When
-overrides
-set
-:
-UNMASKED_RENDERER_WEBGL
-value
-should
-be
-\
-'
-'
-+
-RENDERER_OVERRIDE
-+
-'
-\
-'
-was
-\
-'
-'
-+
-renderer
-+
-'
-\
-'
-'
-)
-;
-var
-vendor
+ret
+.
+unmasked_vendor
 =
 gl
 .
@@ -458,98 +151,262 @@ ext
 UNMASKED_VENDOR_WEBGL
 )
 ;
-AssertError
+}
+return
+ret
+;
+}
+const
+RTX3070_R
+=
+'
+ANGLE
+(
+NVIDIA
+GeForce
+RTX
+3070
+Direct3D11
+vs_5_0
+ps_5_0
+)
+'
+;
+const
+RTX3070_V
+=
+'
+Google
+Inc
+.
+'
+;
+const
+RTX3070_R_SANITIZED
+=
+'
+ANGLE
+(
+NVIDIA
+GeForce
+GTX
+980
+Direct3D11
+vs_5_0
+ps_5_0
+)
+'
+;
+function
+expectJsonEqual
+(
+was
+expected
+when
+)
+{
+if
+(
+when
+)
+{
+when
+=
+when
++
+'
+:
+'
+;
+}
+else
+{
+when
+=
+'
+'
+;
+}
+const
+wasStr
+=
+JSON
+.
+stringify
+(
+was
+)
+;
+const
+expectedStr
+=
+JSON
+.
+stringify
+(
+expected
+)
+;
+let
+str
+=
+{
+when
+}
+Was
+{
+wasStr
+}
+;
+const
+matches
+=
+(
+wasStr
+=
+=
+expectedStr
+)
+;
+if
+(
+!
+matches
+)
+{
+str
++
+=
+expected
+{
+expectedStr
+}
+;
+}
+ok
+(
+matches
+str
+)
+;
+}
+SimpleTest
+.
+waitForExplicitFinish
+(
+)
+;
+(
+async
+function
+(
+)
+{
+const
+canvas
+=
+document
+.
+createElement
+(
+'
+canvas
+'
+)
+;
+gl
+=
+canvas
+.
+getContext
+(
+'
+webgl
+'
+)
+;
+if
+(
+!
+gl
+)
+{
+todo
 (
 gl
-0
 '
-UNMASKED_VENDOR_WEBGL
+Get
+WebGL
+working
+here
+first
+.
 '
 )
 ;
 ok
 (
-vendor
-=
-=
-VENDOR_OVERRIDE
+true
 '
-When
-overrides
-set
-:
-UNMASKED_VENDOR_WEBGL
-value
-should
-be
-\
-'
-'
-+
-VENDOR_OVERRIDE
-+
-'
-\
-'
-was
-\
-'
-'
-+
-vendor
-+
-'
-\
-'
+Test
+complete
+.
 '
 )
 ;
-var
-prefArrArr
-=
+SimpleTest
+.
+finish
+(
+)
+;
+return
+;
+}
+await
+asyncPushPrefEnv
+(
+{
+'
+set
+'
+:
 [
 [
 '
 webgl
 .
-enable
+override
 -
-debug
+unmasked
 -
 renderer
--
-info
 '
-false
+RTX3070_R
 ]
-]
-;
-var
-prefEnv
-=
-{
+[
 '
-set
-'
-:
-prefArrArr
-}
-;
-SpecialPowers
+webgl
 .
-pushPrefEnv
-(
-prefEnv
-TestDisable
+override
+-
+unmasked
+-
+vendor
+'
+RTX3070_V
+]
+]
+}
 )
 ;
-}
-function
-TestDisable
-(
-)
-{
-var
+/
+/
+-
+/
+/
+Initial
+state
 ext
 =
 gl
@@ -584,94 +441,54 @@ WEBGL_debug_renderer_info
 '
 )
 ;
-ok
+{
+const
+EXPECTED
+=
+{
+renderer
+:
+RTX3070_R_SANITIZED
+vendor
+:
+'
+Mozilla
+'
+}
+;
+const
+was
+=
+getStrings
 (
-true
-'
-Test
-complete
-.
-'
 )
 ;
-SimpleTest
-.
-finish
+expectJsonEqual
 (
+was
+EXPECTED
+'
+v92
+behavior
+'
 )
 ;
 }
-(
-function
-(
-)
-{
-var
-canvas
-=
-document
-.
-createElement
-(
-'
-canvas
-'
-)
-;
-gl
-=
-canvas
-.
-getContext
-(
-'
-experimental
+/
+/
 -
-webgl
-'
-)
-;
-if
+/
+/
+Enable
+extension
+await
+asyncPushPrefEnv
 (
-!
-gl
-)
 {
-todo
-(
-gl
 '
-Get
-WebGL
-working
-here
-first
-.
+set
 '
-)
-;
-ok
-(
-true
-'
-Test
-complete
-.
-'
-)
-;
-return
-;
-}
-SimpleTest
-.
-waitForExplicitFinish
-(
-)
-;
-var
-prefArrArr
-=
+:
 [
 [
 '
@@ -688,24 +505,248 @@ info
 true
 ]
 ]
+}
+)
 ;
-var
-prefEnv
+ext
 =
+gl
+.
+getExtension
+(
+'
+WEBGL_debug_renderer_info
+'
+)
+;
+ok
+(
+ext
+'
+When
+pref
+enabled
+:
+Should
+have
+access
+to
+\
+'
+WEBGL_debug_renderer_info
+\
+'
+.
+'
+)
+;
+{
+const
+EXPECTED
+=
+{
+renderer
+:
+RTX3070_R_SANITIZED
+vendor
+:
+'
+Mozilla
+'
+unmasked_renderer
+:
+RTX3070_R
+unmasked_vendor
+:
+RTX3070_V
+}
+;
+const
+was
+=
+getStrings
+(
+)
+;
+expectJsonEqual
+(
+was
+EXPECTED
+'
+v92
+behavior
+w
+/
+ext
+'
+)
+;
+}
+/
+/
+-
+/
+/
+Disable
+detailed
+RENDERER
+await
+asyncPushPrefEnv
+(
 {
 '
 set
 '
 :
-prefArrArr
+[
+[
+'
+webgl
+.
+enable
+-
+renderer
+-
+query
+'
+false
+]
+]
+}
+)
+;
+{
+const
+EXPECTED
+=
+{
+renderer
+:
+'
+Mozilla
+'
+vendor
+:
+'
+Mozilla
+'
+unmasked_renderer
+:
+RTX3070_R
+unmasked_vendor
+:
+RTX3070_V
 }
 ;
-SpecialPowers
-.
-pushPrefEnv
+const
+was
+=
+getStrings
 (
-prefEnv
-TestExt
+)
+;
+expectJsonEqual
+(
+was
+EXPECTED
+'
+v90
+behavior
+'
+)
+;
+}
+/
+/
+-
+/
+/
+Sanitize
+even
+UNMASKED_RENDERER
+await
+asyncPushPrefEnv
+(
+{
+'
+set
+'
+:
+[
+[
+'
+webgl
+.
+sanitize
+-
+unmasked
+-
+renderer
+'
+true
+]
+]
+}
+)
+;
+{
+const
+EXPECTED
+=
+{
+renderer
+:
+'
+Mozilla
+'
+vendor
+:
+'
+Mozilla
+'
+unmasked_renderer
+:
+RTX3070_R_SANITIZED
+unmasked_vendor
+:
+RTX3070_V
+}
+;
+const
+was
+=
+getStrings
+(
+)
+;
+expectJsonEqual
+(
+was
+EXPECTED
+'
+v91
+behavior
+'
+)
+;
+}
+/
+/
+-
+ok
+(
+true
+'
+Test
+complete
+.
+'
+)
+;
+SimpleTest
+.
+finish
+(
 )
 ;
 }
