--- a/browser/base/content/navigator-toolbox.inc.xhtml
+++ b/browser/base/content/navigator-toolbox.inc.xhtml
@@ -3446,6 +3446,59 @@ image
 id
 =
 "
+webRTC
+-
+shareSpeaker
+-
+notification
+-
+icon
+"
+class
+=
+"
+notification
+-
+anchor
+-
+icon
+speaker
+-
+icon
+"
+role
+=
+"
+button
+"
+data
+-
+l10n
+-
+id
+=
+"
+urlbar
+-
+web
+-
+rtc
+-
+share
+-
+speaker
+-
+notification
+-
+anchor
+"
+/
+>
+<
+image
+id
+=
+"
 servicesInstall
 -
 notification
