Bug 1719913 - Add a mochitest. r=tnikkel
Depends on D120568

Differential Revision: https://phabricator.services.mozilla.com/D120779

UltraBlame original commit: 2bffa50c624a33b05484efa23a01b37ca6d5727d

--- a/gfx/layers/apz/test/mochitest/test_group_mouseevents.html
+++ b/gfx/layers/apz/test/mochitest/test_group_mouseevents.html
@@ -604,6 +604,28 @@ helper_bug1662800
 html
 "
 }
+/
+/
+Scrollbar
+-
+dragging
+on
+subframe
+with
+enclosing
+translation
+transform
+{
+"
+file
+"
+:
+"
+helper_drag_bug1719913
+.
+html
+"
+}
 ]
 ;
 /
