--- a/testing/web-platform/tests/sanitizer-api/sanitizer-sanitizeFor.https.tentative.html
+++ b/testing/web-platform/tests/sanitizer-api/sanitizer-sanitizeFor.https.tentative.html
@@ -352,6 +352,98 @@ pass
 )
 ;
 }
+async_test
+(
+t
+=
+>
+{
+let
+s
+=
+new
+Sanitizer
+(
+)
+;
+s
+.
+sanitizeFor
+(
+"
+div
+"
+"
+<
+img
+src
+=
+'
+https
+:
+/
+/
+bla
+/
+'
+>
+"
+)
+;
+t
+.
+step_timeout
+(
+_
+=
+>
+{
+assert_equals
+(
+performance
+.
+getEntriesByName
+(
+"
+https
+:
+/
+/
+bla
+/
+"
+)
+.
+length
+0
+)
+;
+t
+.
+done
+(
+)
+;
+}
+1000
+)
+;
+}
+"
+Sanitizer
+.
+sanitizeFor
+function
+shouldn
+'
+t
+load
+the
+image
+.
+"
+)
+;
 test
 (
 t
