--- a/testing/web-platform/tests/mediacapture-insertable-streams/MediaStreamTrackGenerator-video.https.html
+++ b/testing/web-platform/tests/mediacapture-insertable-streams/MediaStreamTrackGenerator-video.https.html
@@ -56,6 +56,25 @@ js
 script
 >
 <
+script
+src
+=
+"
+/
+webrtc
+/
+RTCPeerConnection
+-
+helper
+.
+js
+"
+>
+<
+/
+script
+>
+<
 /
 head
 >
@@ -140,12 +159,6 @@ pixelColour
 255
 ]
 ;
-function
-makeVideoFrame
-(
-timestamp
-)
-{
 const
 height
 =
@@ -156,6 +169,12 @@ width
 =
 320
 ;
+function
+makeVideoFrame
+(
+timestamp
+)
+{
 const
 canvas
 =
@@ -236,6 +255,11 @@ transferToImageBitmap
 )
 {
 timestamp
+alpha
+:
+'
+discard
+'
 }
 )
 ;
@@ -325,6 +349,11 @@ bytes
 expected
 )
 {
+const
+epsilon
+=
+5
+;
 for
 (
 let
@@ -354,34 +383,21 @@ step
 {
 assert_less_than
 (
-bytes
-[
-i
-]
-expected
-[
-i
-]
-+
-2
-"
-Mismatched
-pixel
-"
-)
-;
-assert_greater_than
+Math
+.
+abs
 (
 bytes
 [
 i
 ]
+-
 expected
 [
 i
 ]
--
-2
+)
+epsilon
 "
 Mismatched
 pixel
@@ -392,6 +408,183 @@ pixel
 )
 ;
 }
+}
+async
+function
+initiateSingleTrackCall
+(
+t
+track
+output
+)
+{
+const
+caller
+=
+new
+RTCPeerConnection
+(
+)
+;
+t
+.
+add_cleanup
+(
+(
+)
+=
+>
+caller
+.
+close
+(
+)
+)
+;
+const
+callee
+=
+new
+RTCPeerConnection
+(
+)
+;
+t
+.
+add_cleanup
+(
+(
+)
+=
+>
+callee
+.
+close
+(
+)
+)
+;
+caller
+.
+addTrack
+(
+track
+)
+;
+t
+.
+add_cleanup
+(
+(
+)
+=
+>
+track
+.
+stop
+(
+)
+)
+;
+callee
+.
+ontrack
+=
+e
+=
+>
+output
+.
+srcObject
+=
+new
+MediaStream
+(
+[
+e
+.
+track
+]
+)
+;
+let
+ontrack_promise
+=
+addEventListenerPromise
+(
+t
+callee
+'
+track
+'
+)
+;
+exchangeIceCandidates
+(
+caller
+callee
+)
+;
+await
+exchangeOffer
+(
+caller
+callee
+)
+;
+/
+/
+Wait
+for
+the
+first
+track
+.
+await
+ontrack_promise
+;
+/
+/
+Exchange
+answer
+.
+let
+answer
+=
+await
+callee
+.
+createAnswer
+(
+)
+;
+await
+callee
+.
+setLocalDescription
+(
+answer
+)
+;
+await
+caller
+.
+setRemoteDescription
+(
+answer
+)
+;
+await
+waitForConnectionStateChange
+(
+callee
+[
+'
+connected
+'
+]
+)
+;
 }
 promise_test
 (
@@ -625,13 +818,6 @@ originalHeight
 videoFrame
 .
 displayHeight
-;
-const
-originalTimestamp
-=
-videoFrame
-.
-timestamp
 ;
 const
 generator
@@ -900,6 +1086,349 @@ for
 a
 video
 element
+.
+'
+)
+;
+promise_test
+(
+async
+t
+=
+>
+{
+const
+generator
+=
+new
+MediaStreamTrackGenerator
+(
+{
+kind
+:
+'
+video
+'
+}
+)
+;
+t
+.
+add_cleanup
+(
+(
+)
+=
+>
+generator
+.
+stop
+(
+)
+)
+;
+const
+video
+=
+document
+.
+createElement
+(
+"
+video
+"
+)
+;
+video
+.
+autoplay
+=
+true
+;
+video
+.
+width
+=
+width
+;
+video
+.
+height
+=
+height
+;
+video
+.
+muted
+=
+true
+;
+let
+connectedResolver
+;
+const
+connectedPromise
+=
+new
+Promise
+(
+(
+resolve
+)
+=
+>
+connectedResolver
+=
+resolve
+)
+;
+/
+/
+Wait
+for
+the
+video
+element
+to
+be
+connected
+to
+the
+generator
+and
+/
+/
+generate
+some
+frames
+.
+video
+.
+onloadstart
+=
+async
+(
+)
+=
+>
+{
+/
+/
+Ensure
+the
+peer
+connection
+has
+connected
+before
+injecting
+frames
+.
+await
+connectedPromise
+;
+let
+writer
+=
+generator
+.
+writable
+.
+getWriter
+(
+)
+;
+for
+(
+let
+i
+=
+0
+;
+i
+<
+5
+;
+i
++
++
+)
+{
+await
+writer
+.
+write
+(
+makeVideoFrame
+(
+i
+)
+)
+;
+}
+}
+;
+let
+videoPlayPromise
+=
+new
+Promise
+(
+(
+resolve
+)
+=
+>
+{
+video
+.
+ontimeupdate
+=
+t
+.
+step_func
+(
+(
+)
+=
+>
+{
+const
+canvas
+=
+document
+.
+createElement
+(
+"
+canvas
+"
+)
+;
+canvas
+.
+width
+=
+width
+;
+canvas
+.
+height
+=
+height
+;
+const
+context
+=
+canvas
+.
+getContext
+(
+'
+2d
+'
+)
+;
+context
+.
+drawImage
+(
+video
+0
+0
+)
+;
+/
+/
+Pick
+a
+pixel
+in
+the
+centre
+of
+the
+video
+and
+check
+that
+it
+has
+the
+colour
+of
+the
+frame
+provided
+.
+const
+pixel
+=
+context
+.
+getImageData
+(
+width
+/
+2
+height
+/
+2
+1
+1
+)
+;
+assertPixel
+(
+t
+pixel
+.
+data
+pixelColour
+)
+;
+resolve
+(
+)
+;
+}
+)
+;
+}
+)
+;
+await
+initiateSingleTrackCall
+(
+t
+generator
+video
+)
+;
+connectedResolver
+(
+)
+;
+return
+videoPlayPromise
+;
+}
+'
+Tests
+that
+frames
+are
+actually
+rendered
+correctly
+in
+a
+stream
+sent
+over
+a
+peer
+connection
 .
 '
 )
