Bug 1722396 - P3: Compare old state bits with new ones to determine state change events. r=morgan
Needed to tweak tests a bit because the code is now more descerning
wheter to fire an event or not. Will do so only if the state actually
changes.

Depends on D120901

Differential Revision: https://phabricator.services.mozilla.com/D120902

UltraBlame original commit: cda26075ae09d337ca4a1aa64c0721ab6926b2d9

--- a/accessible/tests/mochitest/events/test_aria_statechange.html
+++ b/accessible/tests/mochitest/events/test_aria_statechange.html
@@ -183,6 +183,44 @@ application
 javascript
 "
 >
+let
+PromEvents
+=
+{
+}
+;
+Services
+.
+scriptloader
+.
+loadSubScript
+(
+"
+chrome
+:
+/
+/
+mochitests
+/
+content
+/
+a11y
+/
+accessible
+/
+tests
+/
+mochitest
+/
+promisified
+-
+events
+.
+js
+"
+PromEvents
+)
+;
 /
 *
 *
@@ -505,369 +543,372 @@ aValue
 ;
 }
 function
-setAttrOfMixedType
+waitForStateChange
 (
 aID
-aAttr
 aState
-aValue
-)
-{
-this
-.
-DOMNode
-=
-getNode
-(
-aID
-)
-;
-this
-.
-eventSeq
-=
-[
-new
-stateChangeChecker
-(
-aState
-kOrdinalState
-aValue
-=
-=
-"
-true
-"
-this
-.
-DOMNode
-)
-]
-;
-if
-(
-hasState
-(
-aID
-STATE_MIXED
-)
-|
-|
-aValue
-=
-=
-"
-mixed
-"
-)
-{
-this
-.
-eventSeq
-.
-push
-(
-new
-stateChangeChecker
-(
-STATE_MIXED
-kOrdinalState
-aValue
-=
-=
-"
-mixed
-"
-this
-.
-DOMNode
-)
-)
-;
-}
-this
-.
-invoke
-=
-function
-setAttrOfMixedType_invoke
-(
-)
-{
-this
-.
-DOMNode
-.
-setAttribute
-(
-aAttr
-aValue
-)
-;
-}
-;
-this
-.
-getID
-=
-function
-setAttrOfMixedType_getID
-(
+aIsEnabled
 )
 {
 return
-prettyName
+PromEvents
+.
+waitForEvent
+(
+EVENT_STATE_CHANGE
+e
+=
+>
+{
+e
+.
+QueryInterface
+(
+nsIAccessibleStateChangeEvent
+)
+;
+return
+e
+.
+state
+=
+=
+aState
+&
+&
+!
+e
+.
+isExtraState
+&
+&
+aIsEnabled
+=
+=
+e
+.
+isEnabled
+&
+&
+getAccessible
 (
 aID
 )
-+
-"
-"
-+
-aAttr
-+
-"
-changed
-to
-'
-"
-+
-aValue
-+
-"
-'
-"
+=
+=
+e
+.
+accessible
 ;
 }
+)
 ;
 }
+async
 function
-setPressed
+testToggleAttribute
 (
 aID
-aValue
+aAttribute
+aIncludeMixed
 )
 {
-this
-.
-__proto__
+let
+toggleState
 =
-new
-setAttrOfMixedType
-(
-aID
+aAttribute
+=
+=
 "
 aria
 -
 pressed
 "
+?
 STATE_PRESSED
-aValue
-)
-;
-}
-function
-setChecked
-(
-aID
-aValue
-)
-{
-this
-.
-__proto__
-=
-new
-setAttrOfMixedType
-(
-aID
-"
-aria
--
-checked
-"
-STATE_CHECKED
-aValue
-)
-;
-}
-function
-buildQueueForAttr
-(
-aList
-aQueue
-aID
-aInvokerFunc
-)
-{
-for
-(
-var
-i
-=
-0
-;
-i
-<
-aList
-.
-length
-;
-i
-+
-+
-)
-{
-for
-(
-var
-j
-=
-i
-+
-1
-;
-j
-<
-aList
-.
-length
-;
-j
-+
-+
-)
-{
-/
-/
-XXX
 :
-changes
-from
-/
-to
-"
-undefined
-"
-/
-"
-"
-shouldn
-'
-t
-fire
-state
-change
+STATE_CHECKED
+;
 /
 /
-events
 bug
 472142
 .
-aQueue
-.
-push
-(
-new
-aInvokerFunc
-(
-aID
-aList
-[
-i
-]
-)
-)
-;
-aQueue
-.
-push
-(
-new
-aInvokerFunc
-(
-aID
-aList
-[
-j
-]
-)
-)
-;
-}
-}
-}
-function
-buildQueueForAttrOfMixedType
-(
-aQueue
-aID
-aInvokerFunc
-)
-{
-var
-list
+Role
+changes
+here
+if
+aria
+-
+pressed
+is
+added
+/
+/
+accessible
+should
+be
+recreated
+?
+let
+stateChange
 =
-[
-"
-"
-"
-undefined
-"
-"
-false
-"
+waitForStateChange
+(
+aID
+toggleState
+true
+)
+;
+getNode
+(
+aID
+)
+.
+setAttribute
+(
+aAttribute
 "
 true
 "
+)
+;
+await
+stateChange
+;
+stateChange
+=
+waitForStateChange
+(
+aID
+toggleState
+false
+)
+;
+getNode
+(
+aID
+)
+.
+setAttribute
+(
+aAttribute
+"
+false
+"
+)
+;
+await
+stateChange
+;
+if
+(
+aIncludeMixed
+)
+{
+stateChange
+=
+waitForStateChange
+(
+aID
+STATE_MIXED
+true
+)
+;
+getNode
+(
+aID
+)
+.
+setAttribute
+(
+aAttribute
 "
 mixed
 "
-]
-;
-buildQueueForAttr
-(
-list
-aQueue
-aID
-aInvokerFunc
 )
+;
+await
+stateChange
+;
+stateChange
+=
+waitForStateChange
+(
+aID
+STATE_MIXED
+false
+)
+;
+getNode
+(
+aID
+)
+.
+setAttribute
+(
+aAttribute
+"
+"
+)
+;
+await
+stateChange
 ;
 }
-function
-buildQueueForAttrOfBoolType
-(
-aQueue
-aID
-aInvokerFunc
-)
-{
-var
-list
+stateChange
 =
-[
-"
-"
-"
-undefined
-"
-"
-false
-"
+waitForStateChange
+(
+aID
+toggleState
+true
+)
+;
+getNode
+(
+aID
+)
+.
+setAttribute
+(
+aAttribute
 "
 true
 "
-]
-;
-buildQueueForAttr
-(
-list
-aQueue
-aID
-aInvokerFunc
 )
 ;
+await
+stateChange
+;
+if
+(
+aIncludeMixed
+)
+{
+stateChange
+=
+Promise
+.
+all
+(
+[
+waitForStateChange
+(
+aID
+STATE_MIXED
+true
+)
+waitForStateChange
+(
+aID
+toggleState
+false
+)
+]
+)
+;
+getNode
+(
+aID
+)
+.
+setAttribute
+(
+aAttribute
+"
+mixed
+"
+)
+;
+await
+stateChange
+;
+stateChange
+=
+Promise
+.
+all
+(
+[
+waitForStateChange
+(
+aID
+STATE_MIXED
+false
+)
+waitForStateChange
+(
+aID
+toggleState
+true
+)
+]
+)
+;
+getNode
+(
+aID
+)
+.
+setAttribute
+(
+aAttribute
+"
+true
+"
+)
+;
+await
+stateChange
+;
 }
+/
+/
+bug
+472142
+.
+Role
+changes
+here
+too
+if
+aria
+-
+pressed
+is
+removed
+/
+/
+accessible
+should
+be
+recreated
+?
+stateChange
+=
+waitForStateChange
+(
+aID
+toggleState
+false
+)
+;
+getNode
+(
+aID
+)
+.
+removeAttribute
+(
+aAttribute
+)
+;
+await
+stateChange
+;
+}
+async
 function
 doTests
 (
@@ -880,6 +921,36 @@ eventQueue
 (
 )
 ;
+let
+queueFinished
+=
+new
+Promise
+(
+resolve
+=
+>
+{
+gQueue
+.
+onFinish
+=
+function
+(
+)
+{
+resolve
+(
+)
+;
+return
+DO_NOT_FINISH_TEST
+;
+}
+;
+}
+)
+;
 gQueue
 .
 push
@@ -962,42 +1033,6 @@ aria_doc
 "
 false
 )
-)
-;
-buildQueueForAttrOfMixedType
-(
-gQueue
-"
-pressable
-"
-setPressed
-)
-;
-buildQueueForAttrOfMixedType
-(
-gQueue
-"
-pressable_native
-"
-setPressed
-)
-;
-buildQueueForAttrOfMixedType
-(
-gQueue
-"
-checkable
-"
-setChecked
-)
-;
-buildQueueForAttrOfBoolType
-(
-gQueue
-"
-checkableBool
-"
-setChecked
 )
 ;
 gQueue
@@ -1090,10 +1125,77 @@ invoke
 (
 )
 ;
+await
+queueFinished
+;
 /
 /
-Will
-call
+Tests
+beyond
+this
+point
+use
+await
+rather
+than
+eventQueue
+.
+await
+testToggleAttribute
+(
+"
+pressable
+"
+"
+aria
+-
+pressed
+"
+true
+)
+;
+await
+testToggleAttribute
+(
+"
+pressable_native
+"
+"
+aria
+-
+pressed
+"
+true
+)
+;
+await
+testToggleAttribute
+(
+"
+checkable
+"
+"
+aria
+-
+checked
+"
+true
+)
+;
+await
+testToggleAttribute
+(
+"
+checkableBool
+"
+"
+aria
+-
+checked
+"
+false
+)
+;
 SimpleTest
 .
 finish
