Backed out 3 changesets (bug 1722396) for Devtools failures in devtools/server/tests/browser/browser_accessibility_node_events.js. CLOSED TREE
Backed out changeset cda26075ae09 (bug 1722396)
Backed out changeset d953dc56b027 (bug 1722396)
Backed out changeset a1cbf6bbf0c3 (bug 1722396)

UltraBlame original commit: 7f3cf93f5095d10da485a393937d8dfcff492db8

--- a/accessible/tests/mochitest/events/test_aria_statechange.html
+++ b/accessible/tests/mochitest/events/test_aria_statechange.html
@@ -183,44 +183,6 @@ application
 javascript
 "
 >
-let
-PromEvents
-=
-{
-}
-;
-Services
-.
-scriptloader
-.
-loadSubScript
-(
-"
-chrome
-:
-/
-/
-mochitests
-/
-content
-/
-a11y
-/
-accessible
-/
-tests
-/
-mochitest
-/
-promisified
--
-events
-.
-js
-"
-PromEvents
-)
-;
 /
 *
 *
@@ -543,372 +505,369 @@ aValue
 ;
 }
 function
-waitForStateChange
+setAttrOfMixedType
 (
 aID
+aAttr
 aState
-aIsEnabled
+aValue
 )
 {
-return
-PromEvents
+this
 .
-waitForEvent
-(
-EVENT_STATE_CHANGE
-e
+DOMNode
 =
->
-{
-e
-.
-QueryInterface
-(
-nsIAccessibleStateChangeEvent
-)
-;
-return
-e
-.
-state
-=
-=
-aState
-&
-&
-!
-e
-.
-isExtraState
-&
-&
-aIsEnabled
-=
-=
-e
-.
-isEnabled
-&
-&
-getAccessible
+getNode
 (
 aID
 )
-=
-=
-e
-.
-accessible
 ;
-}
+this
+.
+eventSeq
+=
+[
+new
+stateChangeChecker
+(
+aState
+kOrdinalState
+aValue
+=
+=
+"
+true
+"
+this
+.
+DOMNode
+)
+]
+;
+if
+(
+hasState
+(
+aID
+STATE_MIXED
+)
+|
+|
+aValue
+=
+=
+"
+mixed
+"
+)
+{
+this
+.
+eventSeq
+.
+push
+(
+new
+stateChangeChecker
+(
+STATE_MIXED
+kOrdinalState
+aValue
+=
+=
+"
+mixed
+"
+this
+.
+DOMNode
+)
 )
 ;
 }
-async
+this
+.
+invoke
+=
 function
-testToggleAttribute
+setAttrOfMixedType_invoke
 (
-aID
-aAttribute
-aIncludeMixed
 )
 {
-let
-toggleState
+this
+.
+DOMNode
+.
+setAttribute
+(
+aAttr
+aValue
+)
+;
+}
+;
+this
+.
+getID
 =
-aAttribute
+function
+setAttrOfMixedType_getID
+(
+)
+{
+return
+prettyName
+(
+aID
+)
++
+"
+"
++
+aAttr
++
+"
+changed
+to
+'
+"
++
+aValue
++
+"
+'
+"
+;
+}
+;
+}
+function
+setPressed
+(
+aID
+aValue
+)
+{
+this
+.
+__proto__
 =
-=
+new
+setAttrOfMixedType
+(
+aID
 "
 aria
 -
 pressed
 "
-?
 STATE_PRESSED
-:
+aValue
+)
+;
+}
+function
+setChecked
+(
+aID
+aValue
+)
+{
+this
+.
+__proto__
+=
+new
+setAttrOfMixedType
+(
+aID
+"
+aria
+-
+checked
+"
 STATE_CHECKED
+aValue
+)
 ;
+}
+function
+buildQueueForAttr
+(
+aList
+aQueue
+aID
+aInvokerFunc
+)
+{
+for
+(
+var
+i
+=
+0
+;
+i
+<
+aList
+.
+length
+;
+i
++
++
+)
+{
+for
+(
+var
+j
+=
+i
++
+1
+;
+j
+<
+aList
+.
+length
+;
+j
++
++
+)
+{
 /
 /
+XXX
+:
+changes
+from
+/
+to
+"
+undefined
+"
+/
+"
+"
+shouldn
+'
+t
+fire
+state
+change
+/
+/
+events
 bug
 472142
 .
-Role
-changes
-here
-if
-aria
--
-pressed
-is
-added
-/
-/
-accessible
-should
-be
-recreated
-?
-let
-stateChange
-=
-waitForStateChange
-(
-aID
-toggleState
-true
-)
-;
-getNode
-(
-aID
-)
+aQueue
 .
-setAttribute
+push
 (
-aAttribute
-"
-true
-"
-)
-;
-await
-stateChange
-;
-stateChange
-=
-waitForStateChange
+new
+aInvokerFunc
 (
 aID
-toggleState
-false
+aList
+[
+i
+]
+)
 )
 ;
-getNode
-(
-aID
-)
+aQueue
 .
-setAttribute
+push
 (
-aAttribute
-"
-false
-"
+new
+aInvokerFunc
+(
+aID
+aList
+[
+j
+]
+)
 )
 ;
-await
-stateChange
-;
-if
+}
+}
+}
+function
+buildQueueForAttrOfMixedType
 (
-aIncludeMixed
+aQueue
+aID
+aInvokerFunc
 )
 {
-stateChange
+var
+list
 =
-waitForStateChange
-(
-aID
-STATE_MIXED
+[
+"
+"
+"
+undefined
+"
+"
+false
+"
+"
 true
-)
-;
-getNode
-(
-aID
-)
-.
-setAttribute
-(
-aAttribute
+"
 "
 mixed
 "
-)
+]
 ;
-await
-stateChange
-;
-stateChange
-=
-waitForStateChange
+buildQueueForAttr
 (
+list
+aQueue
 aID
-STATE_MIXED
-false
+aInvokerFunc
 )
-;
-getNode
-(
-aID
-)
-.
-setAttribute
-(
-aAttribute
-"
-"
-)
-;
-await
-stateChange
 ;
 }
-stateChange
-=
-waitForStateChange
+function
+buildQueueForAttrOfBoolType
 (
+aQueue
 aID
-toggleState
-true
-)
-;
-getNode
-(
-aID
-)
-.
-setAttribute
-(
-aAttribute
-"
-true
-"
-)
-;
-await
-stateChange
-;
-if
-(
-aIncludeMixed
+aInvokerFunc
 )
 {
-stateChange
+var
+list
 =
-Promise
-.
-all
-(
 [
-waitForStateChange
-(
-aID
-STATE_MIXED
-true
-)
-waitForStateChange
-(
-aID
-toggleState
+"
+"
+"
+undefined
+"
+"
 false
-)
-]
-)
-;
-getNode
-(
-aID
-)
-.
-setAttribute
-(
-aAttribute
 "
-mixed
-"
-)
-;
-await
-stateChange
-;
-stateChange
-=
-Promise
-.
-all
-(
-[
-waitForStateChange
-(
-aID
-STATE_MIXED
-false
-)
-waitForStateChange
-(
-aID
-toggleState
-true
-)
-]
-)
-;
-getNode
-(
-aID
-)
-.
-setAttribute
-(
-aAttribute
 "
 true
 "
-)
+]
 ;
-await
-stateChange
+buildQueueForAttr
+(
+list
+aQueue
+aID
+aInvokerFunc
+)
 ;
 }
-/
-/
-bug
-472142
-.
-Role
-changes
-here
-too
-if
-aria
--
-pressed
-is
-removed
-/
-/
-accessible
-should
-be
-recreated
-?
-stateChange
-=
-waitForStateChange
-(
-aID
-toggleState
-false
-)
-;
-getNode
-(
-aID
-)
-.
-removeAttribute
-(
-aAttribute
-)
-;
-await
-stateChange
-;
-}
-async
 function
 doTests
 (
@@ -921,36 +880,6 @@ eventQueue
 (
 )
 ;
-let
-queueFinished
-=
-new
-Promise
-(
-resolve
-=
->
-{
-gQueue
-.
-onFinish
-=
-function
-(
-)
-{
-resolve
-(
-)
-;
-return
-DO_NOT_FINISH_TEST
-;
-}
-;
-}
-)
-;
 gQueue
 .
 push
@@ -1033,6 +962,42 @@ aria_doc
 "
 false
 )
+)
+;
+buildQueueForAttrOfMixedType
+(
+gQueue
+"
+pressable
+"
+setPressed
+)
+;
+buildQueueForAttrOfMixedType
+(
+gQueue
+"
+pressable_native
+"
+setPressed
+)
+;
+buildQueueForAttrOfMixedType
+(
+gQueue
+"
+checkable
+"
+setChecked
+)
+;
+buildQueueForAttrOfBoolType
+(
+gQueue
+"
+checkableBool
+"
+setChecked
 )
 ;
 gQueue
@@ -1125,77 +1090,10 @@ invoke
 (
 )
 ;
-await
-queueFinished
-;
 /
 /
-Tests
-beyond
-this
-point
-use
-await
-rather
-than
-eventQueue
-.
-await
-testToggleAttribute
-(
-"
-pressable
-"
-"
-aria
--
-pressed
-"
-true
-)
-;
-await
-testToggleAttribute
-(
-"
-pressable_native
-"
-"
-aria
--
-pressed
-"
-true
-)
-;
-await
-testToggleAttribute
-(
-"
-checkable
-"
-"
-aria
--
-checked
-"
-true
-)
-;
-await
-testToggleAttribute
-(
-"
-checkableBool
-"
-"
-aria
--
-checked
-"
-false
-)
-;
+Will
+call
 SimpleTest
 .
 finish
