--- a/accessible/tests/mochitest/events/test_statechange.html
+++ b/accessible/tests/mochitest/events/test_statechange.html
@@ -1118,6 +1118,166 @@ stateChange
 (
 STATE_HASPOPUP
 false
+true
+"
+popupButton
+"
+)
+)
+;
+getNode
+(
+"
+popupButton
+"
+)
+.
+setAttribute
+(
+"
+aria
+-
+haspopup
+"
+"
+tree
+"
+)
+;
+await
+p
+;
+p
+=
+waitForEvent
+(
+.
+.
+.
+stateChange
+(
+STATE_HASPOPUP
+false
+true
+"
+popupButton
+"
+)
+)
+;
+getNode
+(
+"
+popupButton
+"
+)
+.
+setAttribute
+(
+"
+aria
+-
+haspopup
+"
+"
+menu
+"
+)
+;
+await
+p
+;
+p
+=
+waitForEvent
+(
+.
+.
+.
+stateChange
+(
+STATE_HASPOPUP
+false
+true
+"
+popupButton
+"
+)
+)
+;
+getNode
+(
+"
+popupButton
+"
+)
+.
+setAttribute
+(
+"
+aria
+-
+haspopup
+"
+"
+listbox
+"
+)
+;
+await
+p
+;
+p
+=
+waitForEvent
+(
+.
+.
+.
+stateChange
+(
+STATE_HASPOPUP
+false
+true
+"
+popupButton
+"
+)
+)
+;
+getNode
+(
+"
+popupButton
+"
+)
+.
+setAttribute
+(
+"
+aria
+-
+haspopup
+"
+"
+grid
+"
+)
+;
+await
+p
+;
+p
+=
+waitForEvent
+(
+.
+.
+.
+stateChange
+(
+STATE_HASPOPUP
+false
 false
 "
 popupButton
@@ -1180,7 +1340,7 @@ aria
 haspopup
 "
 "
-true
+dialog
 "
 )
 ;
