Bug 1720643 perform getUserMedia Permissions Policy checks even when "media.navigator.permission.disabled" is set r=jib
"media.getusermedia.microphone.deny" and "media.getusermedia.camera.deny" now
override "media.navigator.permission.disabled".

User permission checks are removed because they are repeated in the app.

Differential Revision: https://phabricator.services.mozilla.com/D120065

UltraBlame original commit: 3c77f9f68fe8e21cbd09a89e802ec62f16b57ee9

--- a/dom/media/webrtc/tests/mochitests/test_getUserMedia_permission.html
+++ b/dom/media/webrtc/tests/mochitests/test_getUserMedia_permission.html
@@ -507,6 +507,7 @@ iframe
 origin
 )
 ;
+}
 is
 (
 await
@@ -514,6 +515,8 @@ iframeGum
 (
 {
 src
+:
+path
 sandbox
 :
 "
@@ -536,13 +539,62 @@ gUM
 works
 in
 regular
+same
+-
+origin
 iframe
 "
-+
-origin
 )
 ;
+is
+(
+await
+iframeGum
+(
+{
+src
+:
+https
+:
+/
+/
+test1
+.
+example
+.
+com
+{
+path
 }
+sandbox
+:
+"
+allow
+-
+scripts
+allow
+-
+same
+-
+origin
+"
+}
+)
+"
+NotAllowedError
+"
+"
+gUM
+fails
+in
+regular
+cross
+-
+origin
+iframe
+"
+)
+;
 /
 /
 Test
