Bug 1722782 - Re-enable but deprecate WEBGL_debug_renderer_info. r=lsalzman
Differential Revision: https://phabricator.services.mozilla.com/D121149

UltraBlame original commit: 52689741f6de454403f13349e05748785be45aec

--- a/dom/canvas/test/webgl-mochitest/test_renderer_strings.html
+++ b/dom/canvas/test/webgl-mochitest/test_renderer_strings.html
@@ -364,7 +364,9 @@ return
 ;
 }
 await
-asyncPushPrefEnv
+SpecialPowers
+.
+pushPrefEnv
 (
 {
 '
@@ -405,8 +407,37 @@ RTX3070_V
 -
 /
 /
-Initial
-state
+Test
+disabled
+await
+SpecialPowers
+.
+pushPrefEnv
+(
+{
+'
+set
+'
+:
+[
+[
+'
+webgl
+.
+enable
+-
+debug
+-
+renderer
+-
+info
+'
+false
+]
+]
+}
+)
+;
 ext
 =
 gl
@@ -470,19 +501,32 @@ EXPECTED
 '
 v92
 behavior
+w
+/
+o
+ext
 '
 )
 ;
 }
+await
+SpecialPowers
+.
+popPrefEnv
+(
+)
+;
 /
 /
 -
 /
 /
-Enable
-extension
+Test
+RFP
 await
-asyncPushPrefEnv
+SpecialPowers
+.
+pushPrefEnv
 (
 {
 '
@@ -492,15 +536,9 @@ set
 [
 [
 '
-webgl
+privacy
 .
-enable
--
-debug
--
-renderer
--
-info
+resistFingerprinting
 '
 true
 ]
@@ -521,11 +559,97 @@ WEBGL_debug_renderer_info
 ;
 ok
 (
+!
 ext
 '
-When
-pref
-enabled
+With
+RFP
+:
+Should
+not
+have
+access
+to
+\
+'
+WEBGL_debug_renderer_info
+\
+'
+.
+'
+)
+;
+{
+const
+EXPECTED
+=
+{
+renderer
+:
+'
+Mozilla
+'
+vendor
+:
+'
+Mozilla
+'
+}
+;
+const
+was
+=
+getStrings
+(
+)
+;
+expectJsonEqual
+(
+was
+EXPECTED
+'
+RFP
+behavior
+'
+)
+;
+}
+await
+SpecialPowers
+.
+popPrefEnv
+(
+)
+;
+/
+/
+-
+/
+/
+Test
+default
+state
+(
+v92
++
+)
+ext
+=
+gl
+.
+getExtension
+(
+'
+WEBGL_debug_renderer_info
+'
+)
+;
+ok
+(
+ext
+'
+By
+default
 :
 Should
 have
@@ -555,7 +679,7 @@ Mozilla
 '
 unmasked_renderer
 :
-RTX3070_R
+RTX3070_R_SANITIZED
 unmasked_vendor
 :
 RTX3070_V
@@ -575,9 +699,6 @@ EXPECTED
 '
 v92
 behavior
-w
-/
-ext
 '
 )
 ;
@@ -587,11 +708,13 @@ ext
 -
 /
 /
-Disable
-detailed
-RENDERER
+Test
+v91
+behavior
 await
-asyncPushPrefEnv
+SpecialPowers
+.
+pushPrefEnv
 (
 {
 '
@@ -608,6 +731,82 @@ enable
 renderer
 -
 query
+'
+false
+]
+]
+}
+)
+;
+{
+const
+EXPECTED
+=
+{
+renderer
+:
+'
+Mozilla
+'
+vendor
+:
+'
+Mozilla
+'
+unmasked_renderer
+:
+RTX3070_R_SANITIZED
+unmasked_vendor
+:
+RTX3070_V
+}
+;
+const
+was
+=
+getStrings
+(
+)
+;
+expectJsonEqual
+(
+was
+EXPECTED
+'
+v91
+behavior
+'
+)
+;
+}
+/
+/
+-
+/
+/
+Test
+v90
+behavior
+await
+SpecialPowers
+.
+pushPrefEnv
+(
+{
+'
+set
+'
+:
+[
+[
+'
+webgl
+.
+sanitize
+-
+unmasked
+-
+renderer
 '
 false
 ]
@@ -651,80 +850,6 @@ was
 EXPECTED
 '
 v90
-behavior
-'
-)
-;
-}
-/
-/
--
-/
-/
-Sanitize
-even
-UNMASKED_RENDERER
-await
-asyncPushPrefEnv
-(
-{
-'
-set
-'
-:
-[
-[
-'
-webgl
-.
-sanitize
--
-unmasked
--
-renderer
-'
-true
-]
-]
-}
-)
-;
-{
-const
-EXPECTED
-=
-{
-renderer
-:
-'
-Mozilla
-'
-vendor
-:
-'
-Mozilla
-'
-unmasked_renderer
-:
-RTX3070_R_SANITIZED
-unmasked_vendor
-:
-RTX3070_V
-}
-;
-const
-was
-=
-getStrings
-(
-)
-;
-expectJsonEqual
-(
-was
-EXPECTED
-'
-v91
 behavior
 '
 )
