Bug 1722800 - [devtools] Fix mochitest chrome tests with server targets. r=nchevobbe
Differential Revision: https://phabricator.services.mozilla.com/D121141

UltraBlame original commit: dc0458493cf62b742df29ce0ed9db2cb21602f39

--- a/devtools/server/tests/chrome/test_inspector-dead-nodes.html
+++ b/devtools/server/tests/chrome/test_inspector-dead-nodes.html
@@ -192,6 +192,11 @@ gRootNodeResolve
 =
 null
 ;
+let
+gCommands
+=
+null
+;
 async
 function
 reloadTarget
@@ -226,6 +231,26 @@ reload
 ;
 await
 rootNodePromise
+;
+gWalker
+=
+(
+await
+gCommands
+.
+targetCommand
+.
+targetFront
+.
+getFront
+(
+"
+inspector
+"
+)
+)
+.
+walker
 ;
 }
 addAsyncTest
@@ -298,6 +323,10 @@ gResourceCommand
 commands
 .
 resourceCommand
+;
+gCommands
+=
+commands
 ;
 info
 (
