--- a/devtools/server/tests/chrome/test_inspector-reload.html
+++ b/devtools/server/tests/chrome/test_inspector-reload.html
@@ -185,6 +185,11 @@ gResourceCommand
 =
 null
 ;
+let
+gCommands
+=
+null
+;
 addTest
 (
 async
@@ -266,6 +271,10 @@ gResourceCommand
 commands
 .
 resourceCommand
+;
+gCommands
+=
+commands
 ;
 ok
 (
@@ -470,6 +479,26 @@ reload
 ;
 await
 rootNodePromise
+;
+gWalker
+=
+(
+await
+gCommands
+.
+targetCommand
+.
+targetFront
+.
+getFront
+(
+"
+inspector
+"
+)
+)
+.
+walker
 ;
 info
 (
