--- a/devtools/server/tests/chrome/test_framerate_06.html
+++ b/devtools/server/tests/chrome/test_framerate_06.html
@@ -158,6 +158,76 @@ use
 strict
 "
 ;
+/
+/
+Disable
+server
+targets
+as
+this
+test
+assume
+the
+same
+framerate
+front
+/
+/
+is
+used
+across
+reload
+.
+Services
+.
+prefs
+.
+setBoolPref
+(
+"
+devtools
+.
+target
+-
+switching
+.
+server
+.
+enabled
+"
+false
+)
+;
+SimpleTest
+.
+registerCleanupFunction
+(
+function
+(
+)
+{
+Services
+.
+prefs
+.
+clearUserPref
+(
+"
+devtools
+.
+target
+-
+switching
+.
+server
+.
+enabled
+"
+)
+;
+}
+)
+;
 window
 .
 onload
