Bug 1721593 [wpt PR 29730] - [AspectRatio] Fix select-element-001.html, a=testonly
Automatic update from web-platform-tests
[AspectRatio] Fix select-element-001.html (#29730)

WebKit has the concept of quirky em's which apply to
select elements among other things. In the user agent
stylesheet they are set to apply margin's based on
width/height values but does not take aspect ratio into
account. To avoid the resulting mismatch make sure
margins are set to 0px.
--

wpt-commits: c2ddbb604c9953942ade137925813af2a0490135
wpt-pr: 29730

UltraBlame original commit: 34240d7e0d21194a034b44bfba1f38c2257a706c

--- a/testing/web-platform/tests/css/css-sizing/aspect-ratio/select-element-001-ref.html
+++ b/testing/web-platform/tests/css/css-sizing/aspect-ratio/select-element-001-ref.html
@@ -19,6 +19,41 @@ elements
 title
 >
 <
+!
+-
+-
+WebKit
+uses
+quirky
+em
+in
+user
+agent
+sheet
+for
+margins
+of
+select
+avoid
+it
+-
+-
+>
+<
+style
+>
+select
+{
+margin
+:
+0px
+;
+}
+<
+/
+style
+>
+<
 select
 style
 =
