--- a/testing/web-platform/tests/css/css-sizing/aspect-ratio/select-element-001.html
+++ b/testing/web-platform/tests/css/css-sizing/aspect-ratio/select-element-001.html
@@ -105,6 +105,41 @@ html
 !
 -
 -
+WebKit
+uses
+quirky
+em
+in
+user
+agent
+sheet
+for
+margins
+of
+select
+avoid
+it
+-
+-
+>
+<
+style
+>
+select
+{
+margin
+:
+0px
+;
+}
+<
+/
+style
+>
+<
+!
+-
+-
 Sanity
 Check
 -
