Bug 1721625 [wpt PR 29734] - Reland "[COEPForSharedWorker] Add reporter to shared worker host.", a=testonly
Automatic update from web-platform-tests
Reland "[COEPForSharedWorker] Add reporter to shared worker host."

This is a reland of 0d08f846ca52f20d37d398ae4f73f40a48e5ebb4

Original change's description:
> [COEPForSharedWorker] Add reporter to shared worker host.
>
> Add reporter to shared worker, which doesn't change the
> behaviour as COEP is not currently handed to the
> URLLoaderFactory.
>
> Bug: 1060832
> Change-Id: I4a4b55acd2bcdebef3ab20d741acdc1d188ac719
> Reviewed-on: https://chromium-review.googlesource.com/c/chromium/src/+/2944788
> Commit-Queue: Yifan Luo <lyfchromium.org>
> Reviewed-by: Camille Lamy <clamychromium.org>
> Reviewed-by: Yutaka Hirano <yhiranochromium.org>
> Cr-Commit-Position: refs/heads/master{#903576}

Bug: 1060832
Change-Id: Ibbc9635a174de3a6059779dcf4e497c91a589924
Reviewed-on: https://chromium-review.googlesource.com/c/chromium/src/+/3043581
Reviewed-by: Yifan Luo <lyfchromium.org>
Reviewed-by: Yutaka Hirano <yhiranochromium.org>
Reviewed-by: Camille Lamy <clamychromium.org>
Commit-Queue: Yifan Luo <lyfchromium.org>
Cr-Commit-Position: refs/heads/master{#903879}

--

wpt-commits: 6cb0dafc2b56b5e3edc43fc366f7643c42aba8b8
wpt-pr: 29734

UltraBlame original commit: 2538b00169aa60a1c084928e3ef4a07b415b1ab1

--- a/testing/web-platform/tests/html/cross-origin-embedder-policy/reporting-to-endpoint.https.html
+++ b/testing/web-platform/tests/html/cross-origin-embedder-policy/reporting-to-endpoint.https.html
@@ -322,6 +322,75 @@ endpoint
 "
 )
 ;
+const
+WORKER_URL
+=
+resources
+/
+shared
+-
+worker
+.
+js
++
+'
+?
+pipe
+=
+header
+(
+cross
+-
+origin
+-
+embedder
+-
+policy
+require
+-
+corp
+;
+report
+-
+to
+=
+"
+endpoint
+"
+)
+'
++
+|
+header
+(
+cross
+-
+origin
+-
+embedder
+-
+policy
+-
+report
+-
+only
+require
+-
+corp
+;
+report
+-
+to
+=
+"
+report
+-
+only
+-
+endpoint
+"
+)
+;
 function
 wait
 (
@@ -572,6 +641,16 @@ blockedURL
 is
 {
 blockedUrl
+.
+split
+(
+"
+?
+"
+)
+[
+0
+]
 }
 and
 url
@@ -745,6 +824,16 @@ blockedURL
 is
 {
 blockedUrl
+.
+split
+(
+"
+?
+"
+)
+[
+0
+]
 }
 and
 url
@@ -1570,6 +1659,225 @@ report
 -
 to
 value
+'
+)
+;
+/
+/
+Shared
+worker
+do
+not
+support
+observer
+currently
+so
+add
+test
+for
+endpoint
+/
+/
+here
+.
+promise_test
+(
+async
+(
+t
+)
+=
+>
+{
+const
+iframe
+=
+document
+.
+createElement
+(
+'
+iframe
+'
+)
+;
+t
+.
+add_cleanup
+(
+(
+)
+=
+>
+iframe
+.
+remove
+(
+)
+)
+;
+iframe
+.
+src
+=
+FRAME_URL
+;
+const
+targetUrl
+=
+{
+REMOTE_ORIGIN
+}
+/
+common
+/
+blank
+.
+html
+?
+{
+token
+(
+)
+}
+;
+document
+.
+body
+.
+appendChild
+(
+iframe
+)
+;
+const
+worker
+=
+new
+iframe
+.
+contentWindow
+.
+SharedWorker
+(
+WORKER_URL
+)
+;
+worker
+.
+port
+.
+start
+(
+)
+;
+const
+script
+=
+fetch
+(
+'
+{
+targetUrl
+}
+'
+{
+mode
+:
+'
+no
+-
+cors
+'
+cache
+:
+'
+no
+-
+store
+'
+}
+)
+.
+catch
+(
+e
+=
+>
+{
+}
+)
+;
+;
+worker
+.
+addEventListener
+(
+'
+error
+'
+t
+.
+unreached_func
+(
+'
+Worker
+.
+onerror
+'
+)
+)
+;
+worker
+.
+port
+.
+postMessage
+(
+script
+)
+;
+await
+checkCorpReportExistence
+(
+'
+endpoint
+'
+targetUrl
+WORKER_URL
+'
+iframe
+'
+'
+enforce
+'
+)
+;
+await
+checkCorpReportExistence
+(
+'
+report
+-
+only
+-
+endpoint
+'
+targetUrl
+WORKER_URL
+'
+iframe
+'
+'
+reporting
+'
+)
+;
+}
+'
+Shared
+worker
+fetch
 '
 )
 ;
